--- a/helix-lsp/Cargo.toml
+++ b/helix-lsp/Cargo.toml
@@ -28,6 +28,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot", "sync"] }
 tokio-stream = "0.1.17"
+tower-lsp = "0.19.0"
 parking_lot = "0.12.3"
 arc-swap = "1"
 slotmap.workspace = true
